objects/WT_Knowledge_Category__c.object
<CustomObject>
    <fields>
        <fullName>WT_Category_Title__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Category Title</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>WT_Date_Published__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Published</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WT_Date_Unpublished__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Unpublished</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WT_Display_Order__c</fullName>
        <label>Display Order</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Portal_Icon_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Portal Icon Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Sub_Title__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sub-Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Knowledge Category</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>WT_Date_Published__c</columns>
        <columns>WT_Display_Order__c</columns>
        <columns>WT_Portal_Icon_Name__c</columns>
        <columns>WT_Category_Title__c</columns>
        <columns>WT_Date_Unpublished__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Knowledge Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Knowledge Category</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>